feat: [component] measure update __test__

--- a/src/components/measure/src/Readme.mdx
+++ b/src/components/measure/src/Readme.mdx
@@ -2,7 +2,7 @@ import { Meta, Story } from '@storybook/blocks';
 import { Playground } from '../../mdx-playground';
 import { Default, Scroll, Bounds } from './index.stories';
 import { Measure } from './';
-import { codeDemo, text } from '../__tests__/data';
+import { codeDemo, text } from './data';
 
 # Measure
  
